# Better-than-Nothing

./: .gitignore  .gitmodules  ACKNOWLEDGMENTS.md  AUTHORS.md  CMakeLists.txt  DescriptorPool.old.hpp  Doxyfile  LICENSE.md  LICENSE.txt  Makefile  README.md  build-linux.sh  doxygen-linux.sh  setup-linux.sh  setup.sh  sonar-project.properties
.fleet/: run.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-for-ubuntu.yml  build.yml  cmake.yml  doxygen.yml  sonarcloud.yml
.old/Event/: CEvent.hpp  CWindowCloseEvent.hpp
Assets/Shaders/: compile_shaders.sh  main.frag  main.vert
Assets/Shaders/main/: main.frag  main.vert
Better-Than-Nothing/Modules/Core/: CMakeLists.txt
Better-Than-Nothing/Modules/Runtime/: CMakeLists.txt
Better-Than-Nothing/Shaders/: vert.spv
Better-than-Nothing/Config/: Config.ini
Better-than-Nothing/Modules/: pch.hpp
Better-than-Nothing/Modules/Core/: CMakeLists.txt
Better-than-Nothing/Modules/Core/src/: Application.cpp  Application.hpp  BetterThanNothing.hpp  Window.cpp  Window.hpp
Better-than-Nothing/Modules/Core/src/Context/: Context.hpp
Better-than-Nothing/Modules/Core/src/Engine/: Texture.cpp
Better-than-Nothing/Modules/Core/src/Events/: Event.hpp  EventDispatcher.hpp  KeyEvent.hpp  WindowCloseEvent.hpp
Better-than-Nothing/Modules/Core/src/Handlers/: Input.cpp  Input.hpp
Better-than-Nothing/Modules/Core/src/Layers/: Layer.hpp
Better-than-Nothing/Modules/Core/src/Maths/: Matrix4x4.hpp  Vector.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
Better-than-Nothing/Modules/Core/src/Renderer/: Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  DefaultRenderPass.cpp  DefaultRenderPass.hpp  Descriptor.cpp  Descriptor.hpp  DescriptorLayout.hpp  DescriptorPool.cpp  DescriptorPool.hpp  Device.cpp  Device.hpp  DrawStream.cpp  DrawStream.hpp  DynamicUniforms.hpp  GlobalUniforms.hpp  ImGuiDescriptorPool.cpp  ImGuiDescriptorPool.hpp  Material.hpp  Model.cpp  Model.hpp  Pipeline.cpp  Pipeline.hpp  RenderPass.cpp  RenderPass.hpp  Renderer.cpp  Renderer.hpp  RendererDebugInfo.hpp  SwapChain.cpp  SwapChain.hpp  Texture.cpp  Texture.hpp  UniformBufferObject.hpp  UniformsPool.cpp  UniformsPool.hpp  Vertex.hpp  VertexData.hpp  Window.cpp  (+1 more)
Better-than-Nothing/Modules/Core/src/Renderer/DrawStream/: DrawStream.cpp  DrawStream.hpp  DrawStreamBufferPool.cpp  DrawStreamBufferPool.hpp  GlobalData.hpp  IndexData.hpp  MaterialData.hpp  TransformData.hpp  VertexData.hpp
Better-than-Nothing/Modules/Core/src/Renderer/ImGui/: ImGuiRenderPass.cpp  ImGuiRenderPass.hpp
Better-than-Nothing/Modules/Core/src/Resources/: Model.hpp  ModelPool.cpp  ModelPool.hpp  ResourceManager.cpp  ResourceManager.hpp  ResourcePool.hpp  Shader.hpp  ShaderPool.cpp  ShaderPool.hpp  TexturePool.cpp  TexturePool.hpp
Better-than-Nothing/Modules/Core/src/Ressources/: Model.hpp  ModelPool.cpp  RessourcePool.hpp  Texture.hpp  TexturePool.cpp
Better-than-Nothing/Modules/Core/src/Scene/: Camera.cpp  Camera.hpp  ECSManager.hpp  Entity.cpp  Entity.hpp  Light.hpp  Scene.cpp  Scene.hpp
Better-than-Nothing/Modules/Core/src/Scene/Components/: ModelComponent.hpp  TransformComponent.hpp
Better-than-Nothing/Modules/Core/src/Utils/: ConfigManager.cpp  ConfigManager.hpp  Input.cpp
Better-than-Nothing/Modules/Runtime/: CMakeLists.txt
Better-than-Nothing/Modules/Runtime/src/: ImGuiLayer.cpp  ImGuiLayer.hpp  Runtime.cpp  Runtime.hpp  Sandbox.cpp  Sandbox.hpp  SceneLayer.cpp  SceneLayer.hpp
Better-than-Nothing/Shaders/: compile_shaders.sh
Better-than-Nothing/Shaders/main/: main.frag  main.vert
BetterThanNothing/assets/: frag.spv  main.vert  vert.spv
BetterThanNothing/sources/: Application.cpp  Application.hpp  EntryPoint.cpp  pch.hpp
BetterThanNothing/sources/Audio/: CAudioSystem.hpp
BetterThanNothing/sources/AudioSystem/: CAudioSystem.cpp
BetterThanNothing/sources/Common/: UUID.cpp
BetterThanNothing/sources/ECS/: CEntity.hpp  CSystem.hpp
BetterThanNothing/sources/Engine/: CBuffer.hpp  CCommandBuffer.cpp  CCommandBuffer.hpp  CCommandPool.cpp  CCommandPool.hpp  CDescriptorPool.cpp  CDescriptorPool.hpp  CDevice.cpp  CDevice.hpp  CModel.cpp  CModel.hpp  CPipeline.cpp  CPipeline.hpp  CRenderer.cpp  CRenderer.hpp  CShader.cpp  CShader.hpp  CSwapChain.cpp  CSwapChain.hpp  CTexture.cpp  CTexture.hpp  CUniformBufferObject.hpp  CVertex.hpp  CWindow.cpp  CWindow.hpp  DescriptorPool.cpp  DescriptorPool.hpp  Device.cpp  Device.hpp  Model.cpp  Model.hpp  Pipeline.hpp  Renderer.cpp  Renderer.hpp  SwapChain.cpp  SwapChain.hpp  Texture.cpp  Texture.hpp  Vertex.hpp  Window.cpp  (+1 more)
BetterThanNothing/sources/Event/: CEventDispatcher.hpp  CKeyEvent.hpp  CWindowCloseEvent.hpp
BetterThanNothing/sources/Events/: CEvent.hpp  CKeyEvent.hpp  Event.hpp  EventDispatcher.hpp  WindowCloseEvent.hpp
BetterThanNothing/sources/Handlers/: CInput.cpp  CInput.hpp  CKeyboardHandler.cpp  CKeyboardHandler.hpp  Input.hpp
BetterThanNothing/sources/Layers/: ImGuiLayer.cpp  ImGuiLayer.hpp  Layer.cpp  Layer.hpp  LayerStack.hpp  SceneLayer.cpp  SceneLayer.hpp
BetterThanNothing/sources/Scene/: CCamera.cpp  CCamera.hpp  CComponent.hpp  CComponentType.hpp  CEntityManager.hpp  CScene.cpp  CScene.hpp  CSceneGraph.hpp  Camera.cpp  Camera.hpp  Light.cpp  Light.hpp  Scene.cpp  Scene.hpp
BetterThanNothing/sources/Systems/: AudioSystem.cpp  AudioSystem.hpp
Engine/Modules/Runtime/: CMakeLists.txt
Engine/includes/Core/: Buffer.h  EngineApp.h  Renderer.h  Window.h
Engine/includes/Events/: Cancellable.h  Event.h  EventDispatcher.h  WindowCloseEvent.h
Engine/sources/: EntryPoint.cpp
Sandbox/: Game.cpp  Game.h  ImGuiLayer.cpp  ImGuiLayer.hpp  Sandbox.cpp  Sandbox.hpp  SceneLayer.cpp  SceneLayer.hpp
config/: settings.ini
includes/Core/: EngineApp.h  GameBehavior.h  Renderer.h  Window.h
includes/Events/: Cancellable.h  Event.h  EventDispatcher.h  EventListener.h
includes/Math/: Color.h  Matrix.h  Vector2.h  Vector3.h
sources/: main.cpp
sources/Engine/: EntryPoint.cpp  main.cpp
sources/Game/: Game.cpp  Game.h  main.cpp
src/: main.cpp
(+111 files in other folders)
